--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.7",
+    "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
