--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0"
