--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "sass": "^1.62.1",
