--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
